# dapplooker-substreams

./: .gitignore  README.md
db_sink_substream/evm_network_substream/: Cargo.toml  Makefile  buf.gen.yaml  substreams-sink-v0.1.0.spkg  substreams.yaml
db_sink_substream/evm_network_substream/manifest/: sink_arb.yaml  sink_bnb.yaml  sink_eth.yaml  sink_polygon.yaml
db_sink_substream/evm_network_substream/src/: lib.rs
db_sink_substream/evm_network_with_erc20/: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  package.json  schema.graphql  subgraph.yaml  substreams.yaml
db_sink_substream/evm_network_with_erc20/manifest/: sink_arbitrum.yaml  sink_bnb.yaml  sink_eth.yaml  sink_polygon.yaml
db_sink_substream/evm_network_with_erc20/proto/v1/: erc20.proto
db_sink_substream/evm_network_with_erc20/schema/: clickhouseSchema.sql  create_tables_arbitrum_clickhouse.sql  create_tables_bnb_clickhouse.sql  create_tables_eth_clickhouse.sql  create_tables_polygon_clickhouse.sql
db_sink_substream/evm_network_with_erc20/sink/: substreams-clickhouse.dev.yaml
db_sink_substream/evm_network_with_erc20/sink/schema/: clickhouseSchema.sql  create_tables_bnb_clickhouse.sql  create_tables_polygon_clickhouse.sql
db_sink_substream/evm_network_with_erc20/src/: lib.rs  maps.rs  sinks.rs
db_sink_substream/evm_network_with_erc20/src/abi/: erc20.rs  (+1 more)
network_substream/: Cargo.toml  network-substream-v1.0.0.spkg  schema.graphql  subgraph.yaml  substreams.yaml
network_substream/proto/: block_meta.proto
network_substream/src/: db.rs  eth.rs  lib.rs
network_substream/src/pb/: acme.rs  mod.rs  sf.ethereum.block_meta.v1.rs  sf.substreams.rpc.v2.rs  sf.substreams.v1.rs
(+32 files in other folders)
