[package]
name = "network_substream"
version = "0.1.0"
edition = "2021"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
substreams = "0.5.0"
substreams-ethereum = "0.9.0"
substreams-entity-change = {git = "https://github.com/streamingfast/substreams-entity-change/", branch = "develop"}
prost = "^0.11.0"
prost-types = "0.11.1"
thiserror = "1.0.37"


[profile.release]
lto = true
opt-level = 'z'
strip = "debuginfo"
