[package]
name = "erc20"
version = "0.4.0"
description = "ERC-20"
edition = "2021"
authors = [
    "Denis <denis@pinax.network>",
    "Yaro <yaro@pinax.network>",
    "Matthieu Vachon <https://github.com/maoueh>"
]

[lib]
crate-type = ["cdylib"]

[dependencies]
ethabi = "18.0"
hex = "0.4.3"
hex-literal = "0.3"
prost = "0.11"
prost-types = "0.11"
num-bigint = "0.4"
substreams = "0.5"
substreams-ethereum = "0.9"
substreams-database-change = "1"
substreams-entity-change = "1.3.0"

[build-dependencies]
prost-build = "0.11"
anyhow = "1"
substreams-ethereum = "0.9"
